<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/detail_city_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:text="@string/city_name"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/detail_city_country"
        android:layout_width="42dp"
        android:layout_height="18dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="16dp"
        android:text="@string/city_country_string"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_city_name" />

    <TextView
        android:id="@+id/detail_city_country_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.022"
        app:layout_constraintStart_toEndOf="@+id/detail_city_country"
        app:layout_constraintTop_toBottomOf="@+id/detail_city_name" />

    <TextView
        android:id="@+id/deatail_city_region"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/city_region_string"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_city_country" />

    <TextView
        android:id="@+id/detail_city_country_region_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/deatail_city_region"
        app:layout_constraintTop_toBottomOf="@+id/detail_city_country" />

    <TextView
        android:id="@+id/detail_city_timezone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/city_timezone_string"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/deatail_city_region" />

    <TextView
        android:id="@+id/detail_city_timezone_value"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detail_city_timezone"
        app:layout_constraintTop_toBottomOf="@+id/deatail_city_region" />

    <TextView
        android:id="@+id/detail_city_gmt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/city_gmt_string"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detail_city_timezone_value"
        app:layout_constraintTop_toBottomOf="@+id/deatail_city_region" />

    <TextView
        android:id="@+id/detail_city_latitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="44dp"
        android:layout_marginTop="8dp"
        android:text="@string/city_latitude_string"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detail_city_timezone" />

    <TextView
        android:id="@+id/detail_city_latitud_value"
        android:layout_width="110dp"
        android:layout_height="20dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detail_city_latitud"
        app:layout_constraintTop_toBottomOf="@+id/detail_city_timezone" />

    <TextView
        android:id="@+id/detail_city_longitud"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="@string/city_longitud_string"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detail_city_latitud_value"
        app:layout_constraintTop_toBottomOf="@+id/detail_city_timezone" />

    <TextView
        android:id="@+id/detail_city_longitud_value"
        android:layout_width="118dp"
        android:layout_height="23dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detail_city_longitud"
        app:layout_constraintTop_toBottomOf="@+id/detail_city_timezone" />

    <TextView
        android:id="@+id/gmt_offset"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="TextView"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/detail_city_gmt"
        app:layout_constraintTop_toBottomOf="@+id/deatail_city_region" />
</androidx.constraintlayout.widget.ConstraintLayout>